Update header links and logo text in index.html

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="logo-title">Genspark free Export</h1>
+                    <h1 class="logo-title">GensparkAI free Export</h1>
                     <p class="logo-subtitle">HTML → PPTX Converter</p>
                 </div>
             </div>
             <div class="header-actions">
-                <a href="https://github.com/Melone155/Genspark-free-Export" target="_blank" rel="noopener noreferrer"
+                <a href="https://github.com/Melone155/Genspark-free-Export/wiki" target="_blank" rel="noopener noreferrer"
                     class="btn-header" id="btn-help">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
                         stroke-linejoin="round" width="16" height="16">
@@ -57,7 +57,7 @@
                     </svg>
                     Help
                 </a>
-                <a href="https://github.com/Melone155/Genspark-free-Export/issues/new" target="_blank"
+                <a href="https://github.com/Melone155/Genspark-free-Export/issues" target="_blank"
                     rel="noopener noreferrer" class="btn-header btn-header--accent" id="btn-issue">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
                         stroke-linejoin="round" width="16" height="16">
